# black-widow

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/black-widow/: HttpGetRequest.h  HttpRequest.h  HttpResponse.h  Parser.h  RegexParser.h  StringParser.h
src/: HttpGetRequest.cpp  HttpRequest.cpp  HttpResponse.cpp  RegexParser.cpp  main.cpp
